# rustnn

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  mkdocs.yml
.github/workflows/: ci.yml  docs-pr.yml  docs.yml  rustnnpt-gate.yml  wpt-conformance-nightly.yml  wpt-conformance.yml
docs/architecture/: overview.md
docs/development/: backend-operator-support.md  implementation-status.md  operator-enum-refactor-execution.md
docs/testing/: wpt-test-guide.md
examples/: fast_style_transfer_builder_api.rs  resnet50_webnn_rust.rs  smollm_mlcontext.rs  smollm_webnn_rust.rs
examples/webnn-web/: Cargo.toml  index.html  justfile
examples/webnn-web/src/: lib.rs
protos/tflite/: schema.fbs
scripts/: analyze_wpt_audit.py  embed_wpt_conformance_pages.sh  fetch_wpt.mjs
scripts/wpt_bridge/: dump_corpus.mjs  dump_tests.mjs  load-wpt-file.mjs  render_conformance_html.mjs  wpt-tolerance-env.mjs
src/: backend_selection.rs  debug.rs  error.rs  graph.rs  graphviz.rs  lib.rs  loader.rs  main.rs  mlcontext.rs  mlcontextoptions.rs  mlgraphbuilder.rs  operator_enums.rs  operator_options.rs  operators.rs  runtime_checks.rs  shape_inference.rs  validator.rs  webnn_json.rs
src/backends/: caching.rs  coreml.rs  litert.rs  mod.rs  ort.rs  trtx.rs
src/converters/: coreml_mlprogram.rs  litert.rs  mod.rs  onnx.rs  pool2d_shared.rs  trtx.rs  trtx_gru.rs  trtx_lstm.rs  trtx_rnn.rs  webnn.rs  weight_file_builder.rs
src/executors/: coreml.rs  coreml_shim.mm  mod.rs  onnx.rs  trtx.rs
tests/: run_wpt_conformance.rs  test_litert_execution.rs  test_trtx_execution.rs
tests/snapshots/: run_wpt_conformance__coreml_abs_float16_1D_constant_tensor.snap  run_wpt_conformance__coreml_abs_float16_1D_tensor.snap  run_wpt_conformance__coreml_abs_float16_2D_tensor.snap  run_wpt_conformance__coreml_abs_float16_3D_tensor.snap  run_wpt_conformance__coreml_abs_float16_4D_tensor.snap  run_wpt_conformance__coreml_abs_float16_5D_tensor.snap  run_wpt_conformance__coreml_abs_float16_6D_tensor.snap  run_wpt_conformance__coreml_abs_float16_negative_0D_scalar.snap  run_wpt_conformance__coreml_abs_float16_positive_0D_scalar.snap  run_wpt_conformance__coreml_abs_float32_1D_constant_tensor.snap  run_wpt_conformance__coreml_abs_float32_1D_tensor.snap  run_wpt_conformance__coreml_abs_float32_2D_tensor.snap  run_wpt_conformance__coreml_abs_float32_3D_tensor.snap  run_wpt_conformance__coreml_abs_float32_4D_tensor.snap  run_wpt_conformance__coreml_abs_float32_5D_tensor.snap  run_wpt_conformance__coreml_abs_float32_negative_0D_scalar.snap  run_wpt_conformance__coreml_abs_float32_positive_0D_scalar.snap  run_wpt_conformance__coreml_abs_int32_4D_tensor.snap  run_wpt_conformance__coreml_abs_int64_4D_tensor.snap  run_wpt_conformance__coreml_abs_int8_4D_tensor.snap  run_wpt_conformance__coreml_add___sub___mul___gather_default.snap  run_wpt_conformance__coreml_add_float16_1D_constant_tensors.snap  run_wpt_conformance__coreml_add_float16_1D_tensors.snap  run_wpt_conformance__coreml_add_float16_2D_tensors.snap  run_wpt_conformance__coreml_add_float16_3D_tensors.snap  run_wpt_conformance__coreml_add_float16_4D_tensors.snap  run_wpt_conformance__coreml_add_float16_5D_tensors.snap  run_wpt_conformance__coreml_add_float16_broadcast_1D_to_4D.snap  run_wpt_conformance__coreml_add_float16_broadcast_2D_to_4D.snap  run_wpt_conformance__coreml_add_float16_broadcast_3D_to_4D.snap  run_wpt_conformance__coreml_add_float16_broadcast_4D_to_4D.snap  run_wpt_conformance__coreml_add_float16_large_inputs.snap  run_wpt_conformance__coreml_add_float32_1D_constant_tensors.snap  run_wpt_conformance__coreml_add_float32_1D_tensors.snap  run_wpt_conformance__coreml_add_float32_2D_tensors.snap  run_wpt_conformance__coreml_add_float32_3D_tensors.snap  run_wpt_conformance__coreml_add_float32_4D_tensors.snap  run_wpt_conformance__coreml_add_float32_5D_tensors.snap  run_wpt_conformance__coreml_add_float32_broadcast_1D_to_4D.snap  run_wpt_conformance__coreml_add_float32_broadcast_2D_to_4D.snap  (+9575 more)
tests/wpt_conformance/: coreml_expected_failures.txt  expected_failures.rs  litert_expected_failures.txt  mod.rs  tolerance.rs  webnn_runner.rs  wpt_audit.rs  wpt_backend.rs  wpt_config.rs  wpt_context_pool.rs  wpt_execute_graph.rs  wpt_js_loader.rs  wpt_report.rs  wpt_tensor.rs  wpt_to_graph.rs  wpt_types.rs
tests/wpt_conformance/snapshots/: run_wpt_conformance__wpt_conformance__run_all_trtx.snap
