[package]
name = "rustnn"
version = "0.5.11"
edition = "2024"
description = "W3C WebNN implementation with ONNX, CoreML, and TensorRT backends [DO NOT USE IN PRODUCTION - Development Release]"
license = "Apache-2.0"
repository = "https://github.com/rustnn/rustnn"
keywords = ["webnn", "onnx", "coreml", "tensorrt", "neural-networks"]
categories = ["science", "api-bindings"]
exclude = [
    "site/*",
    "docs/*",
    "tests/*",
    "examples/*",
    ".github/*",
    "*.md",
    "!README.md",
]

[features]
default = []
dynamic-inputs = []
coreml-runtime = ["objc"]
onnx-runtime = ["ort", "ndarray", "dep:tempfile"]
trtx-runtime = ["trtx", "cudarc"]
trtx-runtime-mock = ["trtx/mock", "cudarc"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8", features = ["base64"] }
thiserror = "1.0"
base64 = "0.22"
prost = "0.12"
prost-types = "0.12"
bytes = "1.6"
bytemuck = { version = "1.15", features = ["extern_crate_std"] }
ndarray = { version = "0.17", optional = true }
objc = { version = "0.2", optional = true }
tempfile = { version = "3.8", optional = true }
ort = { version = "=2.0.0-rc.12", optional = true, features = [
    "ndarray",
    "half",
    "load-dynamic",
    "api-24",
] }
half = "2.4"
trtx = { version = "0.5.0", optional = true }
regex = "1.11"
webnn-graph = { git = "https://github.com/rustnn/webnn-graph", branch = "main" }
webnn-onnx-utils = { git = "https://github.com/rustnn/webnn-onnx-utils", branch = "main" }

cudarc = { version = "0.19", features = ["cuda-13020"], optional = true }
log = "0.4.29"
pretty_env_logger = "0.5.0"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tokenizers = { version = "0.22" }
tempfile = "3.8"
half = "2.4"
safetensors = "0.7"
insta = { version = "1.47.2", features = ["yaml"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
dirs = "6.0.0"
anyhow = "1.0.102"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[lib]
name = "rustnn"
crate-type = ["rlib"]
doctest = false
