[package]
name = "rustnn"
version = "0.5.11"
edition = "2024"
# Tests use std::assert_matches!, which requires Rust 1.96.0.
rust-version = "1.95"
description = "W3C WebNN implementation with ONNX, CoreML, and TensorRT backends [DO NOT USE IN PRODUCTION - Development Release]"
license = "Apache-2.0"
repository = "https://github.com/rustnn/rustnn"
keywords = ["webnn", "onnx", "coreml", "tensorrt", "neural-networks"]
categories = ["science", "api-bindings"]
exclude = [
    "site/*",
    "docs/*",
    "tests/*",
    "examples/*",
    ".github/*",
    "*.md",
    "!README.md",
]

# The `objc` 0.2 `msg_send!`/`sel_impl!` macros expand to `cfg(feature = "cargo-clippy")`,
# which rustc flags as an unexpected cfg. A file-level `#![allow(unexpected_cfgs)]` does not
# suppress it because the diagnostic originates inside the external macro; declaring the value
# here (crate-wide check-cfg) is the reliable fix and keeps CI's `-D warnings` green.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[features]
default = []
dynamic-inputs = []
coreml-runtime = ["objc", "block"]
onnx-runtime = ["ort", "ndarray", "dep:tempfile"]
trtx-runtime = ["trtx", "cudarc"]
trtx-runtime-mock = ["trtx/mock", "cudarc"]
litert-runtime = ["litert", "litert-sys", "dep:flatbuffers"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8", features = ["base64"] }
thiserror = "1.0"
base64 = "0.22"
prost = "0.12"
prost-types = "0.12"
bytes = "1.6"
bytemuck = { version = "1.15", features = ["extern_crate_std"] }
ndarray = { version = "0.17", optional = true }
tempfile = { version = "3.8", optional = true }
ort = { version = "=2.0.0-rc.12", optional = true, features = [
    "ndarray",
    "half",
    "load-dynamic",
    "api-24",
] }
half = "2.4"
trtx = { version = "0.7.1", optional = true }
litert = { version = "0.2.1", optional = true }
litert-sys = { version = "0.2.1", optional = true }
flatbuffers = { version = "25.12", optional = true }
regex = "1.11"
webnn-graph = { git = "https://github.com/rustnn/webnn-graph", branch = "main" }
webnn-onnx-utils = { git = "https://github.com/rustnn/webnn-onnx-utils", branch = "main" }

cudarc = { version = "0.19", features = ["cuda-13020"], optional = true }
log = "0.4.29"
pretty_env_logger = "0.5.0"
seahash = "4.1.0"
dirs = "6.0.0"

# The exception feature is needed to avoid undefined behavior when objc throws exceptions
objc = { version = "0.2", optional = true, features = [] } # without "exception" it builds on Linux using https://github.com/gnustep/libobjc2
block = { version = "0.1", optional = true }
[target.'cfg(target_os = "macos")'.dependencies]
# For macOS, explicitly enable the "exception" feature
objc = { version = "0.2", optional = true, features = ["exception"] }

[build-dependencies]
prost-build = "0.12"
cc = "1.0"

[dev-dependencies]
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
tempfile = "3.8"
half = "2.4"
safetensors = "0.7"
insta = { version = "1.47.2", features = ["yaml"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
dirs = "6.0.0"
anyhow = "1.0.102"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
libtest-mimic = "0.8.2"
pretty_env_logger = "0.5.0"

[[test]]
name = "run_wpt_conformance"
path = "tests/run_wpt_conformance.rs"
harness = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[lib]
name = "rustnn"
crate-type = ["rlib"]
doctest = false
