[package]
name = "webnn-web-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = { version = "0.3.91", git = "https://github.com/theHamsta/wasm-bindgen", branch = "webnn", features = [
	"console",
	"Window",
	"MlContext",
	"MlTensor",
	"MlGraph",
	"MlGraphBuilder",
	"Ml",
	"Navigator",
	"MlContextLostInfo",
	"MlGraph",
	"MlOpSupportLimits",
	"MlPowerPreference",
	"GpuDevice",
	"MlContextOptions",
	"MlArgMinMaxOptions",
	"MlBatchNormalizationOptions",
	"MlBatchNormalizationSupportLimits",
	"MlBinarySupportLimits",
	"MlClampOptions",
	"MlConcatSupportLimits",
	"MlContext",
	"MlContextLostInfo",
	"MlContextOptions",
	"MlConv2dOptions",
	"MlConv2dSupportLimits",
	"MlConvTranspose2dOptions",
	"MlCumulativeSumOptions",
	"MlEluOptions",
	"MlGatherOptions",
	"MlGatherSupportLimits",
	"MlGemmOptions",
	"MlGemmSupportLimits",
	"MlGraph",
	"MlGraphBuilder",
	"MlGruCellOptions",
	"MlGruCellSupportLimits",
	"MlGruOptions",
	"MlGruSupportLimits",
	"MlHardSigmoidOptions",
	"MlInstanceNormalizationOptions",
	"MlLayerNormalizationOptions",
	"MlLeakyReluOptions",
	"MlLinearOptions",
	"MlLogicalNotSupportLimits",
	"MlLstmCellOptions",
	"MlLstmCellSupportLimits",
	"MlLstmOptions",
	"MlLstmSupportLimits",
	"MlNormalizationSupportLimits",
	"MlOpSupportLimits",
	"MlOperand",
	"MlOperandDescriptor",
	"MlOperandDataType",
	"MlOperatorOptions",
	"MlPadOptions",
	"MlPool2dOptions",
	"MlPreluSupportLimits",
	"MlQuantizeDequantizeLinearSupportLimits",
	"MlRankRange",
	"MlReduceOptions",
	"MlResample2dOptions",
	"MlReverseOptions",
	"MlScatterOptions",
	"MlScatterSupportLimits",
	"MlSingleInputSupportLimits",
	"MlSliceOptions",
	"MlSplitOptions",
	"MlSplitSupportLimits",
	"MlTensor",
	"MlTensorDescriptor",
	"MlTensorLimits",
	"MlTransposeOptions",
	"MlTriangularOptions",
	"MlWhereSupportLimits",
	"MlPaddingMode",
	"MlInterpolationMode",
] }
wasm-bindgen = { version = "*", git = "https://github.com/theHamsta/wasm-bindgen", branch = "webnn" }
js-sys = { version = "*", git = "https://github.com/theHamsta/wasm-bindgen", branch = "webnn" }
wasm-bindgen-futures = { version = "0.4", git = "https://github.com/theHamsta/wasm-bindgen", branch = "webnn" }
rustnn = { path = "../..", features = ["web"] }
webnn-graph = "0.3"
anyhow = "1.0"

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/theHamsta/wasm-bindgen", branch = "webnn" }
wasm-bindgen-shared = { git = "https://github.com/theHamsta/wasm-bindgen", branch = "webnn" }
wasm-bindgen-macro = { git = "https://github.com/theHamsta/wasm-bindgen", branch = "webnn" }
#wasm-bindgen-backend = { git = "https://github.com/theHamsta/wasm-bindgen", branch = "webnn" }
js-sys = { git = "https://github.com/theHamsta/wasm-bindgen", branch = "webnn" }
web-sys = { git = "https://github.com/theHamsta/wasm-bindgen", branch = "webnn" }
wasm-bindgen-futures = { git = "https://github.com/theHamsta/wasm-bindgen", branch = "webnn" }
